Cleanup XML of transform WriteToLog #4145